# cubin_runner

./: .gitignore  CMakeLists.txt  README.md  _phase1_mxfp4_quantize.py  _phase1_quantize.py  _phase2_cubin_run.py  _phase2_mxfp4_cubin_run.py  bench_e2e.py  bench_moe.py  bench_mxfp4_moe.py  bench_utils.py  benchmark_env.py  context.md  moe_cubin_lib.cu  mxfp4_moe_cubin.py  nsys_analyze.sh  nvfp4_moe_cubin.py  plot_results.py  run_bench.py  sweep_cubins.py  test_correctness.py  test_mxfp4_correctness.py
benchmark_example/: benchmark_dsv3_with_mxint4.sh  benchmark_kimi_k2_with_mxint4.sh
fi_routing/: routing_wrapper.cu  trtllm_fused_moe_routing_renormalize.cu  tvm_ffi_utils.h
mxint4_lib/: moe_cubin_lib_mxint4.cu
mxint4_lib/cubins/: bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x128x128_s4_et128x64_m256x128x16_cga2x1x1_16dp256b_rM_BN_transOut_schedP2x1x2x3_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x128x128_s4_et128x64_m256x128x16_cga2x1x1_16dp256b_rM_BN_transOut_schedS_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x128x128_s4_et128x64_m256x128x16_cga2x1x1_16dp256b_rM_BN_transOut_schedS_bN_tma_tmaOpt_clmp_swiGlu_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x128x128u2_s4_et128x64_m256x128x16_cga2x1x1_16dp256b_rM_BN_transOut_schedP2x1x2x3_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x128x128u2_s4_et128x64_m256x128x16_cga2x1x1_16dp256b_rM_BN_transOut_schedS_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x128x128u2_s4_et128x64_m256x128x16_cga2x1x1_16dp256b_rM_BN_transOut_schedS_bN_tma_tmaOpt_clmp_swiGlu_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256_s3_et128x16_m128x16x16_cga1x1x1_16dp256b_rM_BN_transOut_schedP2x1x2x3_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256_s3_et128x16_m128x16x16_cga1x1x1_16dp256b_rM_BN_transOut_schedS_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256_s3_et128x16_m128x16x16_cga1x1x1_16dp256b_rM_BN_transOut_schedS_bN_tma_tmaOpt_clmp_swiGlu_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256_s3_et128x16_m256x16x16_cga2x1x1_16dp256b_rM_BN_transOut_schedP2x1x2x3_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256_s3_et128x16_m256x16x16_cga2x1x1_16dp256b_rM_BN_transOut_schedS_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256_s3_et128x16_m256x16x16_cga2x1x1_16dp256b_rM_BN_transOut_schedS_bN_tma_tmaOpt_clmp_swiGlu_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256u2_s3_et128x16_m128x16x16_cga1x1x1_16dp256b_rM_BN_transOut_schedP2x1x2x3_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256u2_s3_et128x16_m128x16x16_cga1x1x1_16dp256b_rM_BN_transOut_schedS_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256u2_s3_et128x16_m128x16x16_cga1x1x1_16dp256b_rM_BN_transOut_schedS_bN_tma_tmaOpt_clmp_swiGlu_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256u2_s3_et128x16_m256x16x16_cga2x1x1_16dp256b_rM_BN_transOut_schedP2x1x2x3_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256u2_s3_et128x16_m256x16x16_cga2x1x1_16dp256b_rM_BN_transOut_schedS_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x16x256u2_s3_et128x16_m256x16x16_cga2x1x1_16dp256b_rM_BN_transOut_schedS_bN_tma_tmaOpt_clmp_swiGlu_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x32x256_s3_et128x32_m128x32x16_cga1x1x1_16dp256b_rM_BN_transOut_schedP2x1x2x3_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x32x256_s3_et128x32_m128x32x16_cga1x1x1_16dp256b_rM_BN_transOut_schedS_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x32x256_s3_et128x32_m128x32x16_cga1x1x1_16dp256b_rM_BN_transOut_schedS_bN_tma_tmaOpt_clmp_swiGlu_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x32x256_s3_et128x32_m256x32x16_cga2x1x1_16dp256b_rM_BN_transOut_schedP2x1x2x3_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x32x256_s3_et128x32_m256x32x16_cga2x1x1_16dp256b_rM_BN_transOut_schedS_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x32x256_s3_et128x32_m256x32x16_cga2x1x1_16dp256b_rM_BN_transOut_schedS_bN_tma_tmaOpt_clmp_swiGlu_dynBatch_sm100f_cubin.cpp  bmm_Bfloat16_MxInt4Bfloat16_castBfloat16_Fp32_bA32_t128x32x256u2_s3_et128x32_m128x32x16_cga1x1x1_16dp256b_rM_BN_transOut_schedP2x1x2x3_bN_tmaOpt_clmp_dynBatch_sm100f_cubin.cpp  (+24 more)
mxint4_lib/export/: KernelMetaInfo.h
trtllmGen_bmm_export/: BatchedGemmEnums.h  BatchedGemmInterface.h  BatchedGemmOptions.h  GemmGatedActOptions.h  GemmOptions.h  KernelMetaInfo.h  KernelParamsDecl.h  TmaDescriptor.h  config.json
trtllmGen_bmm_mxfp4_export/: GemmGatedActOptions.h  GemmOptions.h  KernelMetaInfo.h  TmaDescriptor.h  config.json  flashinferMetaInfo.h
trtllmGen_bmm_mxfp4_export_sm100a/: BatchedGemmEnums.h  BatchedGemmInterface.h  BatchedGemmOptions.h  Enums.h  GemmGatedActOptions.h  GemmOptions.h  KernelMetaInfo.h  KernelParams.h  KernelParamsDecl.h  KernelTraits.h  TmaDescriptor.h  config.json  flashinferMetaInfo.h  trtllm
trtllmGen_bmm_mxfp4_export_sm103a/: KernelMetaInfo.h  KernelParams.h  config.json  flashinferMetaInfo.h
trtllmGen_bmm_mxfp4_nofuse_export_sm100a/: BatchedGemmOptions.h  GemmOptions.h  KernelMetaInfo.h  KernelTraits.h  config.json
trtllmGen_bmm_nvfp4_export/: Enums.h  KernelMetaInfo.h  KernelTraits.h
(+42 files in other folders)
